--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/vercel": "^8.0.1",
+    "@fontsource-variable/onest": "^5.1.1",
     "astro": "^5.1.2"
   }
 }
