--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^5.1.4",
     "@astrojs/vercel": "^8.0.2",
     "@fontsource-variable/onest": "^5.1.1",
-    "astro": "^5.1.7"
+    "astro": "^5.1.7",
+    "flowbite": "^2.5.2",
+    "tailwindcss": "^3.4.17"
   }
 }
