--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -1,29 +1,20 @@
 {
-	"version": 3,
-	"routes": [
-		{
-			"src": "^/_astro/(.*)$",
-			"headers": {
-				"cache-control": "public, max-age=31536000, immutable"
-			},
-			"continue": true
-		},
-		{
-			"handle": "filesystem"
-		}
-	],
-	"images": {
-		"sizes": [
-			640,
-			750,
-			828,
-			1080,
-			1200,
-			1920,
-			2048,
-			3840
-		],
-		"domains": [],
-		"remotePatterns": []
-	}
+  "version": 3,
+  "routes": [
+    {
+      "src": "^/_astro/(.*)$",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      },
+      "continue": true
+    },
+    {
+      "handle": "filesystem"
+    }
+  ],
+  "images": {
+    "sizes": [640, 750, 828, 1080, 1200, 1920, 2048, 3840],
+    "domains": [],
+    "remotePatterns": []
+  }
 }
