--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource-variable/onest": "^5.1.1",
     "astro": "^5.3.0",
     "flowbite": "^2.5.2",
+    "latest": "^0.2.0",
     "tailwindcss": "^3.4.17"
   }
 }
